--- a/public/css/style.css
+++ b/public/css/style.css
@@ -160,6 +160,7 @@ input:focus {
     position: relative;
     margin-bottom: 10px;
     width: 90%;
+    margin-bottom: 10px;
 }
 
 .floating-label label {
@@ -205,7 +206,7 @@ input:focus {
 }
 
 .floating-label input:not(:placeholder-shown)+label {
-    transform: translateY(-35px);
+    transform: translateY(25px);
     opacity: .7;
     color: #f3f2f2;
 }
